# image2map

./: .gitignore  Dockerfile  README.md  generate_images.sh  pyproject.toml  requirements.txt  run.py
data/output/mnist/: weights.npy
docs/: requirements.txt
docs/source/: api-header.rst  api.rst  conf.py  genindex.html  index.rst
docs/source/api/: functional.rst  math.rst  plot.rst  som.rst  utils.rst
notebook/: image2map.ipynb
src/image2map/: __init__.py  app.py  dashboard.py  functional.py  math.py  plot.py  som.py  tests.py  utils.py
