[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "image2map"
version = "0.1.0"
description = "A Python package for creating Self-Organizing Maps (SOM) from images"
requires-python = ">=3.7"
readme = {file = "README.md", content-type = "text/markdown"}
license = "BSD-2-Clause"
license-files = ["LICENSE.md"]
keywords = ["Kohonen", "Self-Organizing Maps", "SOM"]
authors = [
    {name = "Nelson Aloysio Reis de Almeida Passos", email = "nelson.reis@phd.unipi.it"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    # "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/nelsonaloysio/image2map"
Repository = "https://github.com/nelsonaloysio/image2map"

[project.optional-dependencies]
docs = [
    "sphinx-autodoc-typehints >=1.23.0",
    "sphinx-rtd-theme >=2.0.0",
    "sphinxemoji >=0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["image2map*"]
exclude = ["image2map.test*"]